# Process this file with autoconf to produce a configure script.
AC_INIT(lxrad_x11, 0.7, lcgamboa@yahoo.com)
AC_PREREQ([2.50])
AC_CONFIG_SRCDIR([lib/capplication.cc])
AC_CONFIG_HEADER([config.h])
#AC_PREFIX_DEFAULT (/usr/local)

# Checks for programs.
AC_PROG_CC()
AC_PROG_CXX()
CFLAGS="-Wall -O3"

# Checks for libraries.
AC_PATH_XTRA
if test x"$no_x" != x; then
  AC_MSG_ERROR([X Window System not found])
fi
AC_CHECK_LIB([pthread], [pthread_create],
cat >>confdefs.h <<_ACEOF
#define HAVE_LIBPTHREAD 1
_ACEOF
LIBS="-lpthread $LIBS"
CFLAGS="$CFLAGS -D_REENTRANT",
AC_MSG_WARN([libpthread Not Found!]))
AC_CHECK_LIB([Imlib2], [imlib_load_image],
cat >>confdefs.h <<_ACEOF
#define HAVE_LIBIMLIB2 1
_ACEOF
LIBS="-lImlib2 $LIBS"
AC_CHECK_LIB([X11], [XOpenDisplay],, AC_MSG_ERROR([libX11 Not Found!]),$X_LIBS),
AC_CHECK_LIB([X11], [XOpenDisplay],, AC_MSG_ERROR([libX11 Not Found!]),$X_LIBS)
AC_CHECK_LIB([Xpm], [XpmReadFileToPixmap],, AC_MSG_WARN([libXpm Not Found!]),$X_LIBS)
AC_MSG_WARN([libImlib2 Not Found!]))

# Checks for header files.
AC_PATH_X
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([locale.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([mkdir setlocale strerror strrchr strstr])


AC_SUBST(PACKAGE,`sed -ne 's/PACKAGE=//p' VERSION`)
AC_SUBST(VERSION,`sed -ne 's/VERSION=//p' VERSION`)
AC_SUBST(MAINVER,`sed -ne 's/MAINVER=//p' VERSION`)
AC_SUBST(MINORVER,`sed -ne 's/MINORVER=//p' VERSION`)
AC_SUBST(HOSTOS,`uname -sr || echo unknown`)
AC_SUBST(HOSTCPU,`uname -m || echo unknown`)

AC_SUBST(LIBS)

AC_SUBST(PREFIX)
AC_SUBST(BINDIR)
AC_SUBST(LIBDIR)

AC_OUTPUT([Makefile
           Makefile.Conf
           docs/Makefile
           include/Makefile
           layout/Makefile
           lib/Makefile
           share/Makefile
           utils/Makefile
           utils/lxrad_X11-config])

